
add_subdirectory(tier0)
add_subdirectory(tier1)
add_subdirectory(tier2)
add_subdirectory(tier3)

add_subdirectory(bitmap)
add_subdirectory(vpklib)
add_subdirectory(vtf)
add_subdirectory(raytrace)
add_subdirectory(mdllib)
add_subdirectory(mathlib)

add_subdirectory(vstdlib)

add_subdirectory(blinkgc)

add_subdirectory(unicode)
add_subdirectory(unitlib)

add_subdirectory(appframework)