
add_subdirectory(tier0)
add_subdirectory(tier1)

add_subdirectory(bitmap)
add_subdirectory(vpklib)
add_subdirectory(vtf)
add_subdirectory(raytrace)
add_subdirectory(mdllib)
add_subdirectory(mathlib)

add_subdirectory(vstdlib)

add_subdirectory(blinkgc)

add_subdirectory(unicode)
add_subdirectory(unitlib)

add_subdirectory(appframework)

add_subdirectory(scenefilecache)
add_subdirectory(serverbrowser)
add_subdirectory(choreoobjects)
add_subdirectory(movieobjects)

add_subdirectory(dmserializers)
add_subdirectory(dmxloader)
add_subdirectory(fgdlib)
add_subdirectory(gcsdk)
add_subdirectory(particles)